Added NearbyAirports and top portion of UI.

--- a/Lab6-Starter.csproj
+++ b/Lab6-Starter.csproj
@@ -100,4 +100,9 @@
 	  <MauiXaml Update="Weather.xaml">
 	  </MauiXaml>
 	</ItemGroup>
+	<ItemGroup>
+	  <MauiXaml Update="NearbyAirports.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
 </Project>
