--- a/Lab6-Starter.csproj
+++ b/Lab6-Starter.csproj
@@ -87,6 +87,9 @@
 	  <Compile Update="PlanningTools.xaml.cs">
 	    <DependentUpon>PlanningTools.xaml</DependentUpon>
 	  </Compile>
+	  <Compile Update="RewardsPage.xaml.cs">
+	    <DependentUpon>RewardsPage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Weather.xaml.cs">
 	    <DependentUpon>Weather.xaml</DependentUpon>
 	  </Compile>
@@ -96,6 +99,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="PlanningTools.xaml">
+	  </MauiXaml>
+	  <MauiXaml Update="RewardsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Weather.xaml">
 	  </MauiXaml>
